infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medisuite
  labels:
    app.kubernetes.io/part-of: medisuite
